2008-05-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/ISearchEngine.cs: Abstracted the search engine.

2008-05-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed Bug 385737 - Text editor shows
	  unnecessary horizontal scrollbar

2008-05-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 382556 - Text editor
	  should respect GTK settings.

2008-05-01  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Add focus in and focus out calls to
	  IMContext. Revert static IMContext changes., which for some reason
	  also fixes crash on double-click.

2008-04-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed resource deallocation.

2008-04-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed an error in keyboard input when
	  multiple text editors are open.

2008-04-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed possible null ref exception when
	  accessing disposed text editor.

2008-04-29  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Dispose the IMContext, and check that
	  it's realised when committing. Hopefully fixes possible NRE after
	  the document is disposed.

2008-04-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Replaced old some old coordination
	  translation code.

2008-04-21  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Attempt to fix major "Bug 382141 - ALL
	  keypresses are intepreted as newlines" by reworking input method
	  context handling.

2008-04-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed keyboard input.

2008-04-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 381115 - Ctrl+s prints an s